--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -5,5 +5,7 @@ $black2: #222;
 $light: #fff;
 $grey: #909090;
 $bgGrey :#f8f8f8 ;
+$bgDotTest : #869791;
+$bgDotClient : #eaeaea;
 $overlay-dark: rgba(0, 0, 0, .7);
 $overlay-light: rgba(255, 255, 255, .9);
