--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -9,7 +9,7 @@
     }
   }
   .footer__media {
-     width: 50%;
+    //  width: 50%;
      margin: 0 auto;
     
     ul {
@@ -18,18 +18,22 @@
         flex-wrap: wrap;
         margin-top: 80px;
         margin-bottom: 80px;
-        width: 100%;
       li {
-          padding: 0 1rem;
+          padding: 0 0.5rem;
         a {
           width: 40px;
           height: 40px;
           text-align: center;
-          border: 1px solid #222;
+          border: 1px solid $black2;
           border-radius: 50%;
           line-height: 40px;
           display: block;
-
+          transition: all 0.3s;
+          &:hover {
+            color: $light;
+            background-color: $black2;
+            border: 1px solid $black2;
+          }
         }
       }
     }
