--- a/scss/components/_purchase.scss
+++ b/scss/components/_purchase.scss
@@ -17,7 +17,7 @@
       display: inline-block;
       margin: 0 5px;
       border: none;
-      width: 75%;
+      width: 100%;
       height: 52px;
       background: #fff;
       box-shadow: none;
@@ -25,6 +25,9 @@
       &:focus {
         outline: 0;
       }
+    }
+    .btn-black {
+      width: 100%;
     }
   }
 }
