--- a/scss/base/_root.scss
+++ b/scss/base/_root.scss
@@ -120,6 +120,7 @@ body {
 // Button back to top
 .cd-top {
     position: fixed;
+    z-index: 1000;
     right: 20px;
     bottom: 20px;
     width: 40px;
